Make sure guess input font color is black (it can be white in dark mode).

--- a/src/assets/Input.css
+++ b/src/assets/Input.css
@@ -5,3 +5,7 @@
     top: 0;
     left: 0;
 }
+
+#guessInput {
+    color: #111;
+}
